--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,9 @@ language: php
 php:
   - 7.0
 
+notifications:
+  webhooks: https://www.travisbuddy.com/
+
 env:
   - MAGENTO_VERSION="2.0"
   - MAGENTO_VERSION="2.1"
