--- a/.travis.yml
+++ b/.travis.yml
@@ -8,17 +8,17 @@ php:
 
 matrix:
   include:
-    - name: "Magento 2.1.*"
-      env: MAGENTO_VERSION="2.1"
-      script:
-#        - cd $HOME && magento-coding-standard/vendor/bin/phpcs --runtime-set ignore_warnings_on_exit true --ignore=dev,Test magento20/vendor/algolia/algoliasearch-magento-2 --standard=MEQP2 --extensions=php,phtml
-        - cd $HOME && eval $(./algolia-keys export) && cd $HOME/magento20/dev/tests/integration && ../../../vendor/bin/phpunit ../../../vendor/algolia/algoliasearch-magento-2/Test
-#    - name: "Magento 2.2.*"
-#      env: MAGENTO_VERSION="2.2"
+#    - name: "Magento 2.1.*"
+#      env: MAGENTO_VERSION="2.1"
 #      script:
-#        - cd $HOME/magento20 && vendor/bin/php-cs-fixer fix vendor/algolia/algoliasearch-magento-2 --dry-run --config=vendor/algolia/algoliasearch-magento-2/.php_cs -v --using-cache=no --allow-risky=yes
 #        - cd $HOME && magento-coding-standard/vendor/bin/phpcs --runtime-set ignore_warnings_on_exit true --ignore=dev,Test magento20/vendor/algolia/algoliasearch-magento-2 --standard=MEQP2 --extensions=php,phtml
 #        - cd $HOME && eval $(./algolia-keys export) && cd $HOME/magento20/dev/tests/integration && ../../../vendor/bin/phpunit ../../../vendor/algolia/algoliasearch-magento-2/Test
+    - name: "Magento 2.2.*"
+      env: MAGENTO_VERSION="2.2"
+      script:
+#        - cd $HOME/magento20 && vendor/bin/php-cs-fixer fix vendor/algolia/algoliasearch-magento-2 --dry-run --config=vendor/algolia/algoliasearch-magento-2/.php_cs -v --using-cache=no --allow-risky=yes
+#        - cd $HOME && magento-coding-standard/vendor/bin/phpcs --runtime-set ignore_warnings_on_exit true --ignore=dev,Test magento20/vendor/algolia/algoliasearch-magento-2 --standard=MEQP2 --extensions=php,phtml
+        - cd $HOME && eval $(./algolia-keys export) && cd $HOME/magento20/dev/tests/integration && ../../../vendor/bin/phpunit ../../../vendor/algolia/algoliasearch-magento-2/Test
 
 branches:
   only:
@@ -48,11 +48,10 @@ install:
   - AUTH_DIR=$HOME/magento20/var/composer_home/auth.json php $TRAVIS_BUILD_DIR/dev/bin/createAuthJson.php
 
   # deploy sample data
-  - cd $HOME
-  - git clone https://github.com/magento/magento2-sample-data.git
-  - cd $HOME/magento2-sample-data && git checkout 2.1.16
+  - cd $HOME && git clone https://github.com/magento/magento2-sample-data.git
+  - cd $HOME/magento20 && MAGENTO_VERSION=$(php -r "echo json_decode(file_get_contents('composer.json'))->version;")
+  - cd $HOME/magento2-sample-data && git checkout $MAGENTO_VERSION
   - cd $HOME/magento20 && php -f $HOME/magento2-sample-data/dev/tools/build-sample-data.php -- --ce-source=$HOME/magento20
-  # - php bin/magento sampledata:deploy
 
   # install the Algolia extension
   - composer require algolia/algoliasearch-magento-2
