--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -72,13 +72,14 @@ jobs:
         - checkout
         - run: sudo composer self-update
         - run: composer config http-basic.'repo.magento.com' ${MAGENTO_AUTH_USERNAME} ${MAGENTO_AUTH_PASSWORD}
+        - run: pwd
         - restore_cache:
             keys:
-            - composer-v1-{{ checksum "composer.lock" }}
+            - composer-v1-{{ checksum "composer.json" }}
             - composer-v1-
         - run: composer install -n --prefer-dist --ignore-platform-reqs --no-progress
         - save_cache:
-            key: composer-v1-{{ checksum "composer.lock" }}
+            key: composer-v1-{{ checksum "composer.json" }}
             paths:
             - vendor
         - run:
