--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -91,8 +91,7 @@ jobs:
         - run:
             name: PHPstan
             command: |
-                composer config --list --global
-                magento2-test ~/build_directory/algoliasearch-magento-2
+                /home/circleci/.composer/vendor/bin/magento2-test ~/build_directory/algoliasearch-magento-2
 
 workflows:
     version: 2
