--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -92,6 +92,9 @@ jobs:
         - run:
             name: PHPstan
             command: |
+                # We need to add some commands to our path in order for the tools to properly work.
+                echo 'export PATH=~/.composer/vendor/bin/:$PATH' >> ~/.bashrc
+                source ~/.bashrc
                 ~/.composer/vendor/bin/magento2-test ~/build_directory/algoliasearch-magento-2
 
 workflows:
