--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -65,8 +65,6 @@ jobs:
             - image: algolia/magento2-circleci:2.3.0
 
     "phpcompatibility":
-      environment:
-        BASH_ENV: "~/.bashrc"
       docker: # run the steps with Docker with PHP 7.2
       - image: circleci/php:7.2
       working_directory: ~/build_directory/algoliasearch-magento-2
@@ -79,7 +77,7 @@ jobs:
             - composer-v1-{{ checksum "composer.json" }}
             - composer-v1-
         - run: composer install -n --prefer-dist --ignore-platform-reqs --no-progress
-        - run: composer global require algolia/magento2-tools && echo 'export PATH=~/.composer/vendor/bin/:$PATH' >> ~/.bashrc # We need to add the vendor directory to our path
+        - run: composer global require algolia/magento2-tools
         - run: echo $PATH
         - save_cache:
             key: composer-v1-{{ checksum "composer.json" }}
@@ -95,6 +93,8 @@ jobs:
         - run:
             name: PHPstan
             command: |
+                echo 'export PATH=~/.composer/vendor/bin/:$PATH' >> $BASH_ENV
+                source $BASH_ENV
                 echo $PATH
                 ~/.composer/vendor/bin/magento2-test ~/build_directory/algoliasearch-magento-2
 
