--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -95,8 +95,7 @@ jobs:
             command: |
                 echo 'export PATH=~/.composer/vendor/bin/:$PATH' >> $BASH_ENV
                 source $BASH_ENV
-                echo $PATH
-                ~/.composer/vendor/bin/magento2-test ~/build_directory/algoliasearch-magento-2
+                magento2-test ~/build_directory/algoliasearch-magento-2
 
 workflows:
     version: 2
