--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -94,7 +94,7 @@ jobs:
             command: |
                 echo 'export PATH=/root/.composer/vendor/bin/:$PATH' >> $BASH_ENV
                 source $BASH_ENV
-                magento2-test ~/magento_directory/vendor/algolia/algoliasearch-magento-2
+                sudo magento2-test ~/magento_directory/vendor/algolia/algoliasearch-magento-2 /root/circleci/.composer/vendor/bin/
 
 workflows:
     version: 2
